1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (REVISION): Increment.  Swarm 1.3 released.
	(install-data-local): Do two installs, for install-sh case.

1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Zone.m (dalloc, [Zone_c -freeIVars:], [Zone_c
	-freeIVarsComponent:], [Zone_c -free:], [Zone_c
	-freeBlock:blockSize:]): Use XFREE instead of xfree.

1998-08-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am: Don't install m2h or make-h2x.
	Create.m: Include swarmconfig.h instead of config.h.

1998-08-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Zone.m ([Zone_c -mapAllocations:]): Drop index.

1998-08-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Create.m: Include config.h.

1998-07-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Create.m ([CreateDrop_s -getObjectName]): Don't add 0x if
	it is known to already be in %p output.

1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Program.m: Tweak comment (@deftype -> @protocol).

	* make-h2x: Search for @protocol instead of @deftype.

	* defobj.h: Replace @deftype with @protocol throughout.

	* Create.m (ATDELIM): Go back to `@' until BLT 2.4 is for real.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* DefClass.m: Don't include stdio.h or stdlib.h.

1998-07-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Create.m (ATDELIMCHAR): New macro, used to delimit name
	and address in -getObjectName (now is `_' instead of `@').

1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* DefClass.m, DefObject.m, Symbol.m: Include misc.h instead of
	string.h.

	* Customize.m, DefClass.m, DefObject.m: Reformatting throughout.

1998-07-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* make-h2x: Use sed instead of basename for determining source
	filename.

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Customize.m, Program.m, Zone.m: Don't include string.h.

	* make-h2x: Handle .lo files.
