@@ -1,3 +1,8 @@
+1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* DefObject.h: Reformatting throughout.
+	(mapalloc): Make descriptor of type id <Symbol>.
+
 1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile.am (REVISION): Increment.  Swarm 1.3 released.
